/*
Copyright 2018 Alex Hunt

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

option go_package = "github.com/alexhunt7/gofigure/proto";

package gofigure;

message FilePath {
  string path = 1;
}
message DeleteRequest {
  string path = 1;
  bool recursive = 2;
}

message StatResult {
  int64 size = 1;
  string mode = 2;
  bool isDir = 3;
  bool exists = 4;

  uint32 uid = 5;
  uint32 gid = 6;
  string owner = 7;
  string group = 8;

  // modification time?
}

message FileRequest {
  FileProperties properties = 1;
  //enum State {
  //  file = 0;
  //  directory = 1;
  //  absent = 2;
  //  symlink = 3;
  //  hardlink = 4;
  //}
  //State state = 2;
  bool recursive = 2;
  bool touch = 3;
  string linkTarget = 4;
  bytes content = 5;
}

message FileProperties {
  string path = 1;
  string owner = 2;
  string group = 3;
  // Everyone gets octal wrong, so only accept strings
  string mode = 4;
}

message DirectoryResult {}
message FileResult {}
message DeleteResult {}

message LineInFileRequest {
  FileProperties properties = 1;
  string line = 2;
  string regex = 3;
  //string before = 4;
  //string after = 5;
}
message LineInFileResult {}
