/*
Copyright 2018 Alex Hunt

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

option go_package = "github.com/alexhunt7/gofigure/proto";

import "file.proto";
import "exec.proto";

package gofigure;

message Empty {}

service Gofigure {
  rpc Directory (FileRequest) returns (DirectoryResult) {}
  rpc File (FileRequest) returns (FileResult) {}
  rpc Delete (DeleteRequest) returns (DeleteResult) {}
  rpc Stat (FilePath) returns (StatResult) {}
  rpc LineInFile (LineInFileRequest) returns (LineInFileResult) {}
  rpc Exec (ExecRequest) returns (ExecResult) {}
  rpc Exit (Empty) returns (Empty) {}
  //rpc Symlink (FileRequest) returns (SymlinkResult) {}
  //rpc Hardlink (FileRequest) returns (HardlinkResult) {}
}
